<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_CRYO_BIN_ACT_STATE" Id="{16fdf690-675e-4483-8dd1-7ccfc208f9e9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CRYO_BIN_ACT_STATE :
(
	NONE := 0,
	OFF,
	SWITCHING_ON,
	ON,
	SWITCHING_OFF,
	ERROR
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>